finale 1 con ancora qualche problemino

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 
         <!-- footer -->
 
-        <footer></footer>
+        <footer>
+            <p>Designed with</p>
+        </footer>
 
     </div>
 </body>
