--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <div class="photo-header">
 
                 <div class="background-text">
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, dolore?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ab officiis itaque, minus necessitatibus consectetur magnam quas iusto, a vitae ex consequatur, molestiae debitis ad?</p>
+                    <div class="text">
+                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, dolore?</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe ab officiis itaque, minus necessitatibus consectetur magnam quas iusto</p>
+                    </div>
                 </div>
                 
             </div>
